- Learner Profile is now separated into PAGES, with Back & Next button + Progress Bar working correctly! (except the FINISH button) - .single-line-element is now compatibility with .align-left & .align-right (float)!

--- a/client/Style/1external/1bootstrap.css
+++ b/client/Style/1external/1bootstrap.css
@@ -1222,7 +1222,7 @@ h2,
 .h2,
 h3,
 .h3 {
-  margin-top: 20px;
+  margin-top: 15px;     /* CUSTOM: changed, make top & bottom margin close to each other */
   margin-bottom: 10px;
 }
 h1 small,
